--- a/src/content/graphos/delivery/implement-proposals.mdx
+++ b/src/content/graphos/delivery/implement-proposals.mdx
@@ -6,7 +6,7 @@ description: Pull GraphQL schema changes from schema proposals using Rover, vali
 
 <GraphOSEnterpriseRequired />
 
-This article describes actions the **Proposal implementation** and **publication** stages of the [schema proposal process](./schema-proposals#proposal-process).
+This article describes actions in the **Proposal implementation** and **publication** stages of the [schema proposal process](./schema-proposals#proposal-process).
 
 ```mermaid
 graph LR
@@ -75,7 +75,7 @@ Regardless, it's best to run checks before publishing changes to make sure no er
 
 ### Ensure changes match an approved proposal
 
-You can [configure schema checks](./configure-proposals/#configure-schema-checks) to include a **Proposals** task that checks whether the changes a check is running on have matching and approved schema proposals.
+You can [configure schema checks](./configure-proposals/#configure-schema-checks) to include a **Proposals** task that verifies whether the changes a check is running on have matching and approved schema proposals.
 
 <img
   src="../img/schema-proposals/proposal-check-settings.jpg"
