--- a/src/content/graphos/delivery/propose-changes.mdx
+++ b/src/content/graphos/delivery/propose-changes.mdx
@@ -38,7 +38,7 @@ You can create a new proposal in [GraphOS Studio](https://studio.apollographql.c
 
 Follow the steps below to create a new proposal:
 
-1. Click the **Propose changes** button in the top right. A modal entitled **Propose schema changes** appears.
+1. Click the **Propose changes** button in the top right. A dialog titled **Propose schema changes** appears.
    <img
      src="../img/schema-proposals/proposal-modal.jpg"
      className="screenshot"
@@ -96,7 +96,7 @@ You can also delete existing subgraphs and rename newly created ones by clicking
 
 ### Lint changes
 
-To lint the schema changes you've made, click the broom icon in the top right of the editor.
+To lint the schema changes you've made, click the Lint schema icon in the top right of the editor.
 
 <img
   src="../img/schema-proposals/lint-changes.jpg"
