--- a/src/content/graphos/delivery/review-proposals.mdx
+++ b/src/content/graphos/delivery/review-proposals.mdx
@@ -60,7 +60,7 @@ You can use the left nav to view changes from a particular subgraph, or see the 
 
 #### Add comments
 
-You can comment on any lines in the detailed view's diff. Hover over the line and click on the chat icon that appears.
+You can comment on any line in the detailed view's diff. Hover over the line and click on the chat icon that appears.
 
 <img
   src="../img/schema-proposals/add-comment.jpg"
