--- a/src/content/graphos/delivery/configure-proposals.mdx
+++ b/src/content/graphos/delivery/configure-proposals.mdx
@@ -24,7 +24,7 @@ Schema proposal configurations are on a **per-graph** basis&mdash;not per-organi
 
 [Permissions](/graphos/org/members) for proposal actions are set at the graph level with the following defaults:
 
-|                        | Org Admin | Graph Admin | Contributor | Observer / Documenter | Consumer |
+| Proposal Action        | Org Admin | Graph Admin | Contributor | Observer / Documenter | Consumer |
 | :--------------------- | :-------: | :---------: | :---------: | :-------------------: | :------: |
 | Change proposal status |     ✓     |      ✓      |             |                       |          |
 | Create proposals       |     ✓     |      ✓      |      ✓      |           ✓           |          |
