--- a/src/content/graphos/delivery/contract-reference.mdx
+++ b/src/content/graphos/delivery/contract-reference.mdx
@@ -1,55 +1,33 @@
 ---
 title: Contract reference
-subtitle: Learn about the rules that apply and error types you may encounter when creating and using contracts
-description: GraphOS contracts allow you to deliver subsets of your federated graph to consumers using the @tag directive.
+subtitle: Learn rules for @tags and filtering and errors you may encounter when creating and using contracts
+description: Reference for valid @tag locations, naming conventions, dependent tag relationships, and errors for Apollo GraphOS contracts.
 ---
 
 <EnterpriseFeature />
-
-## Error types
-
-Whenever GraphOS attempts to create or update your contract schema, it might encounter an error. Errors are identified by the step in the creation process where they occurred:
-
-| Error                                      | Description                                                                                                                        |
-| ------------------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------- |
-| `ADD_DIRECTIVE_DEFINITIONS_IF_NOT_PRESENT` | An error occurred adding directive definitions for `@tag`, `@inaccessible`, and core directive usages.                             |
-| `DIRECTIVE_DEFINITION_LOCATION_AUGMENTING` | An error occured augmenting the directive definition for `@tag` to support `OBJECT`, `FIELD_DEFINITION`, `INTERFACE`, and `UNION`. |
-| `EMPTY_OBJECT_AND_INTERFACE_MASKING`       | All of an object or interface type's fields were excluded, and an error occurred while excluding the entire type.                  |
-| `EMPTY_UNION_MASKING`                      | All of a union type's included types were excluded, and an error occurred while excluding the entire union.                        |
-| `INPUT_VALIDATION`                         | The contract is attempting to include and exclude the same tag.                                                                    |
-| `PARSING`                                  | After including and excluding fields, the resulting contract schema failed to parse.                                               |
-| `PARSING_TAG_DIRECTIVES`                   | GraphOS encountered an error while trying to obtain all uses of `@tag` from the source variant schema.                             |
-| `PARTIAL_INTERFACE_MASKING`                | An interface field's return type was excluded, and an error occurred while excluding that interface field.                         |
-| `SCHEMA_RETRIEVAL`                         | GraphOS encountered an error while retrieving the source variant's schema. It might not yet have a valid composed schema.          |
-| `TAG_INHERITING`                           | GraphOS encountered an error while attempting to add parent tags to fields.                                                        |
-| `TAG_MATCHING`                             | GraphOS encountered an error determining which types and fields should be inaccessible based on their tags.                        |
-| `TO_API_SCHEMA`                            | GraphOS encountered an error while attempting to generate an API schema from the contract variant's supergraph schema.             |
-| `TO_FILTER_SCHEMA`                         | GraphOS failed to generate and return a contract supergraph schema for an unknown reason.                                          |
-| `UNKNOWN`                                  | An unknown error occurred.                                                                                                         |
-| `UNREACHABLE_TYPE_MASKING`                 | GraphOS encountered an error while attempting to exclude unreachable types in the resulting contract schema.                       |
-| `VERSION_CHECK`                            | The Federation version used is not supported by contracts.                                                                         |
 
 ## Rules for `@tag`s and contracts
 
 ### Valid `@tag` locations
 
-**In both Federation 1 and Federation 2,** you can apply tags to the following to filter your contract schema:
+**In both Federation 1 and Federation 2,** you can apply tags to the following schema elements to filter your contract schema:
 
-- Definitions of object, interface, and union types
-- Fields of object types (Federation 1 doesn't support tagging fields of interface types)
-  - In Federation 1, you can still make an interface field inaccessible by tagging the interface definition, or by ensuring that object fields that implement the interface field are removed.
+- Object, interface, and union type definitions
+- Fields of object types
+  - Federation 1 doesn't support tagging fields of interface types.
+  - In Federation 1, you can still make an interface field inaccessible by tagging the interface definition or by ensuring that object fields that implement the interface field are removed.
 
-**In Federation 2 only,** you can _also_ apply tags to the following:
+**In Federation 2 only,** you can also apply tags to the following:
 
 - Fields of interface types
 - Enum types and their values
 - Input types and their fields
 - Definitions of custom scalar types
-- Arguments of fields, **but not directive arguments at this time**
+- Arguments of fields, **but not directive arguments**
 
 ### Valid `@tag` names
 
-- Tag names can include alphanumeric characters (`a-z`, `A-Z`, `0-9`), along with hyphen (`-`) and forward slash (`/`).
+- `@tag` names can include alphanumeric characters (`a-z`, `A-Z`, `0-9`), along with hyphens (`-`) and forward slashes (`/`).
 - Each tag name cannot exceed 128 characters.
 
 ```graphql {3}
@@ -69,7 +47,7 @@ type User {
   }
   ```
 
-- Whenever you tag the definition of an object, interface, or union type, **you should always** apply that same tag to every field that _returns_ that type:
+- Whenever you tag the definition of an object, interface, or union type, **you should always** apply that same tag to every field that returns that type:
 
   ```graphql {1,7}
   type BillingAccount @tag(name: "internal") {
@@ -82,11 +60,15 @@ type User {
   }
   ```
 
-  - If you don't do this, a contract might exclude a type while including fields that return that type. This produces an invalid contract schema.
+  <Caution>
+
+  If you don't do this, a contract might exclude a type while including fields that return that type. This produces an invalid contract schema.
+
+  </Caution>
 
 - If a contract excludes an object that implements an interface or is included in a union:
 
-  - The contract is _not_ required to exclude schema fields that return that interface or union, as long as at least one other associated object type remains:
+  - The contract is _not_ required to exclude schema fields that return that interface or union as long as at least one other associated object type remains:
 
     ```graphql {1,7,13,20}
     # Two object types implement this interface.
@@ -113,11 +95,11 @@ type User {
     }
     ```
 
-  - **However**, if a subgraph resolves one of these fields by returning an object of an excluded type, a runtime error occurs in the router and the operation fails.
+  - However, if a subgraph resolves one of these fields by returning an object of an excluded type, a runtime error occurs in the router and the operation fails.
 
 ### Special cases for filtering
 
-- If a contract defines a list of Included Tags, any object or interface type _without_ an included tag is still included in the contract schema _if_ at least one of its _fields_ is included:
+- If a contract defines a list of included `@tags`, any object or interface type _without_ an included tag is still included in the contract schema if at least one of its _fields_ is included:
 
   ```graphql
   # This type definition is included because one if its fields is included.
@@ -135,7 +117,11 @@ type User {
   }
   ```
 
-  - This can produce an invalid contract schema if any fields that _return_ the excluded type are included.
+  <Caution>
+
+  This can produce an invalid contract schema if any fields that return the excluded type are included.
+
+  </Caution>
 
 - If a contract excludes _every object type_ that's part of a union type, the entire union type definition is excluded from the contract schema:
 
@@ -152,7 +138,11 @@ type User {
   }
   ```
 
-  - This can produce an invalid contract schema if any fields that _return_ the excluded union type are included.
+  <Caution>
+
+  This can produce an invalid contract schema if any fields that return the excluded union type are included.
+
+  </Caution>
 
 - A contract _cannot_ exclude any of the following, even if tagged:
 
@@ -161,3 +151,211 @@ type User {
   - Custom directives that are applied to type system locations ([see the list](https://spec.graphql.org/October2021/#TypeSystemDirectiveLocation))
 
 - A contract _can_ exclude object fields that are used in a computed field's [`@requires` directive](/federation/entities-advanced/#contributing-computed-entity-fields) without causing runtime errors.
+
+## Errors
+
+GraphOS may encounter the following errors when creating or updating a contract schema.
+Errors descriptions include the step in the creation process where the error occurred:
+
+<table class="field-table">
+  <thead>
+    <tr>
+      <th>Error</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+<tbody>
+<tr>
+<td>
+
+##### `ADD_DIRECTIVE_DEFINITIONS_IF_NOT_PRESENT`
+
+</td>
+<td>
+
+An error occurred adding directive definitions for `@tag`, `@inaccessible`, and core directive usages.
+
+</td>
+</tr>
+<tr>
+<td>
+
+##### `DIRECTIVE_DEFINITION_LOCATION_AUGMENTING`
+
+</td>
+<td>
+
+An error occurred augmenting the directive definition for `@tag` to support `OBJECT`, `FIELD_DEFINITION`, `INTERFACE`, and `UNION`.
+
+</td>
+</tr>
+<tr>
+<td>
+
+##### `EMPTY_OBJECT_AND_INTERFACE_MASKING`
+
+</td>
+<td>
+
+All of an object or interface type's fields were excluded, and an error occurred while excluding the entire type.
+
+</td>
+</tr>
+<tr>
+<td>
+
+##### `EMPTY_UNION_MASKING`
+
+</td>
+<td>
+
+All of a union type's included types were excluded, and an error occurred while excluding the entire union.
+
+</td>
+</tr>
+<tr>
+<td>
+
+##### `INPUT_VALIDATION`
+
+</td>
+<td>
+
+The contract is attempting to include and exclude the same tag.
+
+</td>
+</tr>
+<tr>
+<td>
+
+##### `PARSING`
+
+</td>
+<td>
+
+After including and excluding fields, the resulting contract schema failed to parse.
+
+</td>
+</tr>
+<tr>
+<td>
+
+##### `PARSING_TAG_DIRECTIVES`
+
+</td>
+<td>
+
+GraphOS encountered an error while trying to obtain all uses of `@tag` from the source variant schema.
+
+</td>
+</tr>
+<tr>
+<td>
+
+##### `PARTIAL_INTERFACE_MASKING`
+
+</td>
+<td>
+
+An interface field's return type was excluded, and an error occurred while excluding that interface field.
+
+</td>
+</tr>
+<tr>
+<td>
+
+##### `SCHEMA_RETRIEVAL`
+
+</td>
+<td>
+
+GraphOS encountered an error while retrieving the source variant's schema. It might not yet have a valid composed schema.
+
+</td>
+</tr>
+<tr>
+<td>
+
+##### `TAG_INHERITING`
+
+</td>
+<td>
+
+GraphOS encountered an error while attempting to add parent tags to fields.
+
+</td>
+</tr>
+<tr>
+<td>
+
+##### `TAG_MATCHING`
+
+</td>
+<td>
+
+GraphOS encountered an error determining which types and fields should be inaccessible based on their tags.
+
+</td>
+</tr>
+<tr>
+<td>
+
+##### `TO_API_SCHEMA`
+
+</td>
+<td>
+
+GraphOS encountered an error while attempting to generate an API schema from the contract variant's supergraph schema.
+
+</td>
+</tr>
+<tr>
+<td>
+
+##### `TO_FILTER_SCHEMA`
+
+</td>
+<td>
+
+GraphOS failed to generate and return a contract supergraph schema for an unknown reason.
+
+</td>
+</tr>
+<tr>
+<td>
+
+##### `UNKNOWN`
+
+</td>
+<td>
+
+An unknown error occurred.
+
+</td>
+</tr>
+<tr>
+<td>
+
+##### `UNREACHABLE_TYPE_MASKING`
+
+</td>
+<td>
+
+GraphOS encountered an error while attempting to exclude unreachable types in the resulting contract schema.
+
+</td>
+</tr>
+<tr>
+<td>
+
+##### `VERSION_CHECK`
+
+</td>
+<td>
+
+The Federation version used is not supported by contracts.
+
+</td>
+</tr>
+</tbody>
+</table>
