--- a/src/content/graphos/delivery/contract-setup.mdx
+++ b/src/content/graphos/delivery/contract-setup.mdx
@@ -1,12 +1,12 @@
 ---
-title: Contract implementation
+title: Creating and using contracts
 subtitle: Learn how to create, edit, and validate contracts in GraphOS
-description: GraphOS contracts allow you to deliver subsets of your federated graph to consumers using the @tag directive.
+description: Learn how to use the @tag directive in subgraph schemas and create, edit, and validate contracts in GraphOS Studio
 ---
 
 <EnterpriseFeature />
 
-## Creating contracts
+## Create contracts
 
 <Note>
 
@@ -18,43 +18,54 @@ The GraphOS Studio steps below require an organization member with the **Org Adm
 
 #### Update your router and subgraphs
 
-**Before you create any contracts:**
+Before you create any contracts:
 
-1. If you're using the `@apollo/gateway` library for your router instead of the Apollo Router:
+1. If you're using the `@apollo/gateway` library instead of the Apollo Router:
 
    - For Federation 2 contract variants, update your gateway's `@apollo/gateway` library to version 2.0.2 or later.
    - For Federation 1 contract variants, update your gateway's `@apollo/gateway` library to version 0.34.0 or later.
 
    Otherwise, you'll encounter runtime errors.
 
-2. For Federation 2 contract variants, update your Apollo Server subgraphs to use version 2.0.0 or later of the `@apollo/subgraph` library. For Federation 1 contract variants, update `@apollo/subgraph` to version 0.1.1 or later.
+2. If you're using Apollo Server:
 
-   - `@apollo/subgraph` recently replaced `@apollo/federation` for Apollo Server instances acting as subgraphs. Symbol names are unchanged.
+   - For Federation 2 contract variants, update your Apollo Server subgraphs to version 2.0.0 or later of the `@apollo/subgraph` library.
+   - For Federation 1 contract variants, update `@apollo/subgraph` to version 0.1.1 or later.
+
+<Note>
+
+`@apollo/subgraph` replaced `@apollo/federation` for Apollo Server instances acting as subgraphs. Symbol names are unchanged.
+
+</Note>
 
 Older versions of the above libraries and tools don't fully support the required `@tag` directive.
 
-#### (Fed1) Enable variant support for `@tag`
+#### (Fed1 only) Enable variant support for `@tag`
 
-**This step is required for Federation 1 supergraphs only.** If you have a Federation 2 supergraph, proceed to [the next step](#1-add-tags).
+<Note>
 
-A contract uses one of your graph's existing [variants](/graphos/graphs/#variants) (called the **source variant**) to generate its contract schema. If your source variant uses Federation 1, you need to enable its support for the `@tag` directive in GraphOS Studio.
+This step is required for Federation 1 supergraphs only. If you have a Federation 2 supergraph, proceed to [the next step](#1-add-tags).
 
-Open the Settings page for the variant you want to use as your source variant, then select the **This Variant** tab:
+</Note>
 
-<img
-  className="screenshot"
-  alt="Edit supported directives in Studio"
-  src="../img/contract-variant-settings.jpg"
-  width="600"
-/>
+A contract uses one of your graph's existing [variants](/graphos/graphs/#variants) (called the **source variant**) to generate its contract schema. If your source variant uses Federation 1, you need to enable its support for the `@tag` directive in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content):
 
-In the **Build Configuration** section, click **Edit Configuration** and enable support for `@tag`.
+1. Open the Settings page for the variant you want to use as your source variant, then select the **This Variant** tab:
+
+   <img
+     className="screenshot"
+     alt="Edit supported directives in Studio"
+     src="../img/contract-variant-settings.jpg"
+     width="600"
+   />
+
+2. In the **Build Configuration** section, click **Edit Configuration** and enable support for `@tag`.
 
 ### 1. Add `@tag`s
 
 With contracts, you apply the `@tag` directive to types and fields in your subgraph schemas to indicate whether to include or exclude them from your **contract schema**.
 
-Before you can add `@tag`s, you need to define the directive in your subgraph schema. The way you do this depends on which version of federation you're using:
+Before you can add `@tag`s, you need to define the directive in your subgraph schema. The way you do this depends on which federation version you're using:
 
 <ExpansionPanel title="Federation 1">
 
@@ -84,7 +95,7 @@ extend schema
 
 For example, let's take a look at this Federation 2 subgraph schema:
 
-```graphql {1-3,6,11} title="products.graphql"
+```graphql {8,13} title="products.graphql" disableCopy=true
 extend schema
   @link(
     url: "https://specs.apollo.dev/federation/v2.0"
@@ -116,73 +127,69 @@ This schema applies the `@tag` directive to the following locations:
 
 Each `@tag` has a string `name`. You tag types and fields with the _same_ `name` if they should be included or excluded as a group by a particular contract.
 
-For in-depth details on valid `@tag` usage, see [Rules for `@tag`s and contracts](#rules-for-tags-and-contracts).
+For in-depth details on valid `@tag` usage, see [Rules for `@tag`s and contracts](./contract-reference#rules-for-tags-and-contracts).
 
-Whenever GraphOS composes your source variant's [supergraph schema](/federation/federated-types/overview), that schema retains all of the `@tag`s from your subgraph schemas. This is different from most other directives, which are removed by default.
+Whenever GraphOS composes your source variant's [supergraph schema](/federation/federated-types/overview), that schema retains all the `@tag`s from your subgraph schemas. Composition removes some other directives by default. [Learn more.](/federation/federated-types/composition/#directives)
 
 ### 2. Publish updated subgraph schemas
 
-After you're done adding tags, update your source variant by publishing your updated subgraph schemas to GraphOS.
+After you've added tags, update your source variant by publishing your updated subgraph schemas to GraphOS.
 
 <Tip>
 
-After publishing, if Studio doesn't reflect the the tags that you've added in your subgraph schemas, make sure you've [updated all required libraries and tools](#1-update-your-router-and-subgraphs). If you obtain your subgraph schemas via introspection, older subgraph libraries might strip the `@tag` directive.|
+After publishing, if Studio doesn't reflect the `@tags` you've added in your subgraph schemas, ensure you've [updated all required libraries and tools](#update-your-router-and-subgraphs). If you obtain your subgraph schemas via introspection, older subgraph libraries might strip the `@tag` directive.|
 
 </Tip>
 
-Now you're ready to create your first contract!
-
 ### 3. Create a contract
 
-Open your source variant's Settings page and select the **This Variant** tab. This time, click **Contracts**:
+1. Open your source variant's **Settings** page and open the **This Variant** tab. Open **Contracts** in the left nav:
 
-<img
-  className="screenshot"
-  alt="Contract settings in Studio"
-  src="../img/contract-create.jpg"
-  width="550"
-/>
+   <img
+     className="screenshot"
+     alt="Contract settings in Studio"
+     src="../img/contract-create.jpg"
+     width="550"
+   />
 
-Click **Create Contract** to open the following dialog:
+2. Click **Create Contract** to open the following dialog:
 
-<img
-  className="screenshot"
-  alt="Create contract dialog"
-  src="../img/contracts-dialog.jpg"
-  width="550"
-/>
+   <img
+     className="screenshot"
+     alt="Create contract dialog"
+     src="../img/contracts-dialog.jpg"
+     width="550"
+   />
 
-#### Basic details
+3. In the first step of the dialog, provide the following:
 
-In the first step of the dialog, provide the following:
+   - A name for your new contract variant
+   - The source variant to use
 
-- A name for your new contract variant
-- The source variant to use
+  <Note>
 
-<Note>
+    You can't change these values after the contract is created.
 
-You can't change these values after the contract is created.
+  </Note>
 
-</Note>
+4. Click **Continue**.
 
-Then click **Continue**.
+5. Specify tag-based filters for your contract:
 
-#### Contract filters
+   <img
+     className="screenshot"
+     alt="Create contract dialog"
+     src="../img/contract-tags.jpg"
+     width="550"
+   />
 
-Next, you specify tag-based filters for your contract:
+   - The dialog detects all tag names used in your source variant's schema and populates the **Excluded Tags** and **Included Tags** dropdown lists with those names. You can add any number of tag names to each list.
 
-<img
-  className="screenshot"
-  alt="Create contract dialog"
-  src="../img/contract-tags.jpg"
-  width="550"
-/>
+   - You can also add tag names that aren't yet present in your source variant's schema. If you later add tags with that name, the contract honors them.
 
-The dialog detects all tag names that are used in your source variant's schema, and it populates its dropdown lists with those names. You can add any number of tag names to each list.
+<ExpansionPanel title="How filtering works">
 
-You can also add tag names that aren't yet present in your source variant's schema. If you later add tags with that name, the contract honors them.
-
-Your contract will filter types and fields from its source variant according to the following rules:
+A contract filters types and fields from its source variant according to the following rules:
 
 - **If the Included Tags list is empty**, the contract schema _includes_ each type and object/interface field _unless_ it's tagged with an _excluded_ tag.
 - **If the Included Tags list is non-empty**, the contract schema _excludes_ each union type and object/interface field _unless_ it's tagged with an _included_ tag.
@@ -191,49 +198,44 @@ Your contract will filter types and fields from its source variant according to 
 - **If you enable the option to hide unreachable types**, the contract schema _excludes_ each unreachable object, interface, union, input, enum, and scalar _unless_ it's tagged with an _included_ tag.
   - A type is considered **unreachable** in a schema if there exists no path to that type from _either_ a [root operation type](https://spec.graphql.org/October2021/#sec-Root-Operation-Types) or an [executable-directive](https://spec.graphql.org/October2021/#ExecutableDirectiveLocation).
 
+</ExpansionPanel>
+
 <Tip>
 
-In Apollo Federation 2, if you want to exclude a type or field from your _source variant's_ API schema _and_ all of its contract schemas, you can use the `@inaccessible` directive instead of `@tag`. For details, see [Using `@inaccessible`](/federation/federated-types/sharing-types/#using-inaccessible).
+In Apollo Federation 2, if you want to exclude a type or field from your source variant's API schema and all of its contract schemas, you can use the `@inaccessible` directive instead of `@tag`. For details, see [Using `@inaccessible`](/federation/federated-types/sharing-types/#using-inaccessible).
 
 </Tip>
 
-When you're finished adding tag names, click **Generate Preview**. Studio attempts to generate a contract schema based on the filters you provided and displays the result:
+6. When you're finished adding tag names, click **Generate Preview**. Studio attempts to generate a contract schema based on the filters you provided and displays the result:
 
-<img
-  className="screenshot"
-  alt="Result of contract preview generation"
-  src="../img/contract-generate-preview.jpg"
-  width="300"
-/>
+   <img
+     className="screenshot"
+     alt="Result of contract preview generation"
+     src="../img/contract-generate-preview.jpg"
+     width="300"
+   />
 
-After you generate the preview, you can click **Review** to continue to the next step.
+7. After you generate the preview, can click **Review** to continue to the next step.
+8. You can now review all of the details of your contract:
 
-#### Review and launch
+   <img
+     className="screenshot"
+     alt="Create contract dialog"
+     src="../img/contract-review.jpg"
+     width="550"
+   />
 
-You can now review all of the details of your contract:
-
-<img
-  className="screenshot"
-  alt="Create contract dialog"
-  src="../img/contract-review.jpg"
-  width="550"
-/>
-
-If everything looks right, click **Create**. This kicks off the generation of your contract variant and its initial contract schema as a [launch](./launches).
+9. If everything looks right, click **Create**. This kicks off the generation of your contract variant and its initial contract schema as a [launch](./launches).
 
 Congratulations! You've created your first GraphOS contract.
 
 <Note>
 
-GraphOS might encounter an error while generating your contract schema. For descriptions of these errors, see [Error types](#error-types).
+GraphOS might encounter an error while generating your contract schema. For descriptions of these errors, see [Errors](./contract-reference#errors).
 
 </Note>
 
-## Using contract variants
-
-You can use your contract variants to provide [contract routers or contract documentation](#what-are-contracts-for) to your users. For example, you can complete the [managed federation setup](/federation/managed-federation/setup/) for a new router instance that uses your contract variant.
-
-## Editing contracts
+## Edit contracts
 
 <Note>
 
@@ -241,28 +243,30 @@ You can't change an existing contract's name or source variant. Instead, you can
 
 </Note>
 
-After you create a contract, you can edit its lists of included and excluded tags. From the Contracts list in your graph's Settings page, click **Edit Contract** where shown:
+After you create a contract, you can edit its lists of included and excluded tags:
 
-<img
-  className="screenshot"
-  alt="Edit contract menu"
-  src="../img/contract-edit.jpg"
-  width="550"
-/>
+1. From the Contracts list in your graph's Settings page, click **Edit Contract** where shown:
 
-This opens a dialog similar to the one you used to create the contract.
+   <img
+     className="screenshot"
+     alt="Edit contract menu"
+     src="../img/contract-edit.jpg"
+     width="550"
+   />
 
-If you make any changes to the contract's included or excluded tags, GraphOS automatically runs [contract checks](#contract-checks) to determine whether those changes will affect any clients that user your contract variant.
+   This opens a dialog similar to the one you used to [create the contract](#3-create-a-contract). Make any required changes.
 
-The result of these checks is shown in the Review Schema step of the contract edit dialog:
+2. If you change the contract's included or excluded tags, GraphOS automatically runs [contract checks](#run-contract-checks) to determine whether those changes will affect any clients using your contract variant. The result of these checks appears in the **Review Schema** step of the contract edit dialog:
 
-<img
-  className="screenshot"
-  alt="Contract edit dialog with checks result"
-  src="../img/contract-edit-check.jpg"
-/>
+   <img
+     className="screenshot"
+     alt="Contract edit dialog with checks result"
+     src="../img/contract-edit-check.jpg"
+   />
 
-## Running contract checks
+3. The dialog shows **Contract Updated** once the update is complete.
+
+## Run contract checks
 
 If you run [schema checks](./schema-checks/) in GraphOS Studio (which we recommend for all graphs), those checks include **contract checks** for any variant that acts as a source variant for contracts. Contract checks help your team identify when proposed changes to a source variant will negatively affect one or more downstream contracts.
 
@@ -270,21 +274,21 @@ If you run [schema checks](./schema-checks/) in GraphOS Studio (which we recomme
 
 To run contract checks via `rover subgraph check`, you must [update the Rover CLI](/rover/getting-started/#installation-methods) to v0.8.2 or later.
 
-- **If you use Rover v0.8.0 or v0.8.1,** contract checks _do_ run, but Rover ignores any contract check failures in [blocking downstream variants](#failing-contract-checks) you've set.
+- **If you use Rover v0.8.0 or v0.8.1,** contract checks run, but Rover ignores any contract check failures in [blocking downstream variants](#failing-contract-checks) you've set.
 - **If you use a version prior to v0.8.0,** `rover subgraph check` does not run contract checks _at all_.
 
 </Note>
 
-When you run schema checks on a source variant, contract checks execute alongside the other types of checks for that variant (build checks and operation checks).
+When you run schema checks on a source variant, contract checks execute alongside the other checks for that variant ([composition checks](./schema-checks/#composition-checks) and [operation checks](./schema-checks/#operation-checks)).
 
-Contract checks rely on the supergraph schema that's generated by build checks, so they _don't_ execute if that composition fails.
+Contract checks rely on the supergraph schema generated by composition, so they _don't_ execute if composition checks fail.
 
 Contract checks do the following for **each** of a source variant's associated contracts:
 
-1. Use the source variant's proposed supergraph schema (generated by build checks) to generate and validate an updated contract schema
-2. Run operation checks against the updated contract schema
+1. Use the source variant's proposed supergraph schema (validated by composition checks) to generate and validate an updated contract schema.
+2. Run operation checks against the updated contract schema.
 
-On your graph's Checks page in Studio, contract checks are shown as **Downstream**:
+On your graph's **Checks** page in Studio, contract checks appear as **Downstream**:
 
 <img
   className="screenshot"
@@ -302,9 +306,9 @@ You can click the **Downstream** item in the Tasks column to view a summary of a
 
 ### Failing contract checks
 
-Unlike with other types of checks, failing contract checks **don't** cause their associated schema checks workflow to fail by default. This means that the `rover subgraph check` command doesn't return an error state that would prevent a CI task from merging or deploying changes to the source variant.
+Unlike other types of checks, failing contract checks **don't** cause their associated schema checks workflow to fail by default. This means that the `rover subgraph check` command doesn't return an error state that would prevent a CI task from merging or deploying changes to the source variant.
 
-If you _do_ want failing contract checks to fail your entire checks workflow, you can set **blocking downstream variants** for your source variant. If contract checks fail for any of these specified contract variants, the source variant's checks workflow _does_ fail.
+If you want failing contract checks to fail your entire checks workflow, you can set **blocking downstream variants** configuration for your source variant. If contract checks fail for any of these specified contract variants, the source variant's checks workflow _does_ fail.
 
 To set blocking downstream variants:
 
@@ -319,15 +323,19 @@ To set blocking downstream variants:
 
 3. Select each contract variant that should be a blocking downstream variant.
 
-You're done! From now on, whenever schema checks run for your source variant, those checks _will_ fail if contract checks fail for _any_ blocking downstream variant.
+From now on, whenever schema checks run for your source variant, those checks fail if contract checks fail for _any_ blocking downstream variant.
+
+## Using contract variants
+
+You can use your contract variants to provide [contract routers or contract documentation](./contracts#how-to-use-contracts) to your users. For example, you can complete the [managed federation setup](/federation/managed-federation/setup/) for a new router instance that uses your contract variant.
 
 ## Automatic updates
 
 Apollo automatically updates your contract schema whenever any of the following occurs:
 
 - GraphOS successfully composes an updated supergraph schema for the contract's source variant.
-- You [edit your contract](#editing-a-contract).
+- You [edit your contract](#edit-contracts).
 
-This makes sure that your contract schema reflects the latest version of your source variant's schema, and that the correct types and fields are included and excluded.
+These automatic updates ensure that your contract schema reflects your source variant's latest version and that the correct types and fields are included and excluded.
 
-Updates to your contract schema are automatically fetched by your managed [contract routers](#contract-routers).
+Your managed [contract routers](./contracts#contract-routers) automatically fetched updates to your contract schema.
