--- a/src/content/technotes/TN0046-migrating-away-from-monolith.mdx
+++ b/src/content/technotes/TN0046-migrating-away-from-monolith.mdx
@@ -11,6 +11,12 @@ Many organizations aim to transition from a monolithic architecture to a [federa
 
 This tech note explores one of the most successful migration patterns: **the strangler pattern**. This approach allows for iterative and progressive changes, providing businesses with the confidence to invest in transformative changes.
 
+<Tip>
+
+Learn more about the benefits of [federation](/federation).
+
+</Tip>
+
 ## Migration steps
 
 The strangler pattern involves logically dissecting the monolith and migrating each part incrementally. This approach enables a smooth transition away from a monolith while demonstrating gradual progress to your organization.
@@ -25,19 +31,6 @@ The initial challenge is determining how to divide the monolith. Most companies 
 - Order
 - Payment
 - Customer Account
-
-```mermaid
-flowchart TB
-  subgraph Monolith
-  direction LR
-  Product["Product"];
-  Inventory["Inventory"];
-  Cart["Cart"];
-  Order["Order"];
-  Payment["Payment"];
-  CustomerAccount["Customer Account"];
-  end
-```
 
 The simplified monolith setup illustrates how clients fetch data and the tight integration within the system.
 
@@ -69,7 +62,7 @@ To overcome this, you can leverage [federated architecture](/federation).
 
 ### Decouple clients
 
-The approach involves decoupling existing clients from the monolith onto an established contract provided by the federation layer, thus mitigating the risk of back-end changes affecting clients.
+Migration involves decoupling clients from the monolith onto a federated graph. With federation, clients can interact with the federated graph as if it were a monolith. This mitigates the risk of back-end changes affecting clients.
 
 ```mermaid
 flowchart LR
@@ -104,7 +97,7 @@ The API Gateway facilitates fetching data responses from the newly federated arc
 
 ### Incrementally migrate further domains
 
-Once one subgraph is proven and tested, the pattern is established to add further subgraphs, progressively enhancing functionality into the federated architecture. It's crucial to keep the monolith as a data source initially to de-risk the migration and ensure reliable data service.
+Once one subgraph is successfully implemented, the pattern is established to add further subgraphs, progressively enhancing functionality into the federated architecture. It's crucial to keep the monolith as a data source initially to de-risk the migration and ensure reliable data service.
 
 ```mermaid
 flowchart LR
@@ -137,7 +130,7 @@ Gateway --- Payment
 Gateway --- CustomerAccount
 ```
 
-The new federated architecture eventually handles all traffic for each client.
+The federated architecture eventually handles all traffic for each client.
 
 ```mermaid
 flowchart LR
@@ -217,7 +210,7 @@ CustomerAccount["Customer Account"];
 end
 ```
 
-The diagram shows newly created microservices serving domains previously handled by the monolith. This pattern hides implementation details from the client while fulfilling the agreed data response through the supergraph contract.
+The diagram below shows newly created microservices serving domains previously handled by the monolith. This pattern hides implementation details from the client while fulfilling the agreed data response.
 
 ```mermaid
 flowchart LR
@@ -258,4 +251,4 @@ The transformation is complete when all monolith domains have migrated, allowing
 
 ## Conclusion
 
-While moving away from a deeply entrenched monolith may seem daunting, taking the strangler pattern approach makes the task more manageable. You can use the supergraph to decouple systems, facilitating a seamless migration away from the monolith without impacting clients.
+While moving away from a deeply entrenched monolith may seem daunting, taking the strangler pattern approach makes the task more manageable. You can use the federated architecture to decouple systems, facilitating a seamless migration away from the monolith without impacting clients.
