Add schema proposals to other schema pipeline docs (#647)
* Add Publication tip

* Add schema proposals to Pipeline overview

* Add Proposals task to schema checks

--- a/src/content/graphos/delivery/publishing-schemas.mdx
+++ b/src/content/graphos/delivery/publishing-schemas.mdx
@@ -8,6 +8,12 @@ Whenever you make changes to a graph's schema, you should **publish** those chan
 
 This page covers how to publish different kinds of schemas using the Rover CLI. Consult the [Platform API](/graphos/platform-api/) reference to learn how to use the API for publication.
 
+<Tip>
+
+Incorporate [schema proposals](./schema-proposals) into [schema checks](./schema-checks) to ensure your organization only publishes preapproved changes. [Learn more.](./implement-proposals#ensure-changes-match-an-approved-proposal)
+
+</Tip>
+
 ## Prerequisites
 
 1. [Install the Rover CLI](/rover/getting-started/).
